Fix issue with table content overlapping following section;  make paragraph font size smaller; add dataparnerhsip.org external links

--- a/static/assets/scss/layout/footer.scss
+++ b/static/assets/scss/layout/footer.scss
@@ -16,6 +16,12 @@
     max-width: 380px;
   }
 
+  small {
+    a {
+      color: $blue;
+    }
+  }
+
   @media (max-width: 992px) {
     & {
       flex-direction: column;
