--- a/static/assets/scss/sections/data-fellows.scss
+++ b/static/assets/scss/sections/data-fellows.scss
@@ -17,7 +17,7 @@
 
     p {
       color: $dark-gray;
-      font-size: 1.6rem;
+      font-size: 1.4rem;
       line-height: 1.9rem;
       margin: 0;
       margin-bottom: 1.5rem;
@@ -66,27 +66,9 @@ iframe {
   width: 100%;
 }
 
-.about-data-fellows {
-  background-color: $dark-green;
-  padding: 4rem 10rem;
-  width: 100%;
 
-   p {
-     font-size: 1.5rem;
-     margin: .5rem;
-     max-width: 760px;
-     width: 60%;
-   }
-}
 
-.about-fellows-heading {
-  color: $white;
-  font-size: 3rem;
-  font-weight: 400;
-  text-transform: uppercase;
-}
-
-@media (max-width: 993px) {
+@media (max-width: 1200px) {
   .data-fellows {
     .info-container {
       .data-fellows-badge {
