--- a/static/assets/scss/sections/data-leads.scss
+++ b/static/assets/scss/sections/data-leads.scss
@@ -18,7 +18,7 @@
 
     .data-leads-description {
       color: $dark-gray;
-      font-size: 1.6rem;
+      font-size: 1.4rem;
       line-height: 1.9rem;;
       margin: 0;
       max-width: 580px;
@@ -70,8 +70,9 @@ iframe {
   width: 100%;
 
    p {
-     font-size: 1.5rem;
+     font-size: 1.4rem;
      margin: .5rem;
+     margin-left: 0;
      max-width: 760px;
      width: 60%;
    }
