--- a/static/assets/scss/sections/skill-badges.scss
+++ b/static/assets/scss/sections/skill-badges.scss
@@ -42,7 +42,7 @@
     }
 
     .skill-badges-info {
-      font-size: 1.6rem;
+      font-size: 1.4rem;
       line-height: 1.9rem;
     }
 
